feat: Update app name and assets to "Bé Học Cùng Rồng Con"
This commit rebrands the application from "Cuộc Phiêu Lưu Của Bé và Rồng Con Tí Hon" to "Bé Học Cùng Rồng Con". This involves updating the project name in `package.json`, the title in `index.html`, and the main title displayed in `App.tsx`.

Additionally, the DragonCharacter SVG has been refined with improved styling and more visually appealing elements, and the DialogueBox now correctly handles audio availability for auto-play and user interaction. The StartScreen's interaction button is now correctly enabled only after the introductory audio has finished playing or is confirmed to be unavailable, ensuring a smoother user experience.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cuộc-phiêu-lưu-của-bé-và-rồng-con-tí-hon",
+  "name": "bé-học-cùng-rồng-con",
   "private": true,
   "version": "0.0.0",
   "type": "module",
